nova configuração de dados

--- a/.env_example
+++ b/.env_example
@@ -1,7 +1,14 @@
 CONF_BOT_SERVER_ID=0
 
-CONF_MONGODB_USER=test
-CONF_MONGODB_PASSWD=test
-CONF_MONGODB_HOST=ip:port
-CONF_MONGODB_COLLECTIONS=base
-CONF_MONGODB_SOURCE=source
+CONF_MONGODB_USER=admin
+CONF_MONGODB_PASSWD=admin
+CONF_MONGODB_HOST=127.0.0.1:27017
+CONF_MONGODB_COLLECTIONS=admin
+CONF_MONGODB_SOURCE=admin
+
+CONF_DB_DRIVER=pgsql
+CONF_DB_HOST=127.0.0.1
+CONF_DB_PORT=5432
+CONF_DB_BASE=admin
+CONF_DB_USER=admin
+CONF_DB_PASSWD=admin
